--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "README.md",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gitbook serve",
-    "build": "gitbook build",
-    "gitbook:install": "gitbook install"
+    "start": "docsify serve",
+    "serve": "docsify serve"
   },
   "repository": {
     "type": "git",
@@ -23,11 +22,5 @@
   "bugs": {
     "url": "https://github.com/AckeeCZ/frontend-cookbook/issues"
   },
-  "homepage": "https://github.com/AckeeCZ/frontend-cookbook#readme",
-  "devDependencies": {
-    "gitbook-cli": "^2.3.2"
-  },
-  "dependencies": {
-    "gitbook-plugin-collapsible-menu": "^1.0.3"
-  }
+  "homepage": "https://github.com/AckeeCZ/frontend-cookbook#readme"
 }
