--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/AckeeCZ/frontend-cookbook/issues"
   },
-  "homepage": "https://github.com/AckeeCZ/frontend-cookbook#readme"
+  "homepage": "https://github.com/AckeeCZ/frontend-cookbook#readme",
+  "dependencies": {
+    "docsify-cli": "^4.4.0"
+  }
 }
